[package]
name = "tide-lambda-listener"
version = "0.1.1"
authors = ["Jeremiah Senkpiel <fishrock123@rocketmail.com>"]
edition = "2018"
license = "BlueOak-1.0.0"
description = "A Tide listener for the AWS Lambda execution envrionment."
readme = "README.md"
repository = "https://github.com/Fishrock123/tide-lambda-listener"
keywords = ["tide", "lambda", "listener", "aws"]
categories = [
  "web-programming::http-server"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2" # hyperium http, used by lambda
lambda_http = { version = "0.3.0-patched.1", package = "fishrock_lambda_http" }
lambda_runtime = { version = "0.3.0-patched.1", package = "fishrock_lambda_runtime" }
tracing = "0.1"

[dependencies.async-std]
version = "1.9"
default-features = false
features = ["std"]

[dependencies.http-client]
version = "6.4"
default-features = false
features = ["unstable-config"]

[dependencies.http-types]
version = "2.11"
features = ["hyperium_http"]

[dependencies.surf]
version = "2.1"
default-features = false
features = ["h1-client", "encoding"]

[dependencies.tide]
version = "0.16"
default-features = false

# Dev-deps

[dev-dependencies.async-std]
version = "1.9"
default-features = false
features = ["attributes"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["user-hooks"]
